--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,33 +12,35 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-09 Fri 10:27]
+#+CAPTION: Clock summary at [2016-12-09 Fri 12:12]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *53:20* |       |       | 100.0 |
+| *Total time*                                                                | *55:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 53:20   |       |       | 100.0 |
-| Active                                                                      |         | 53:20 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.5 |
+| Stories                                                                     | 55:01   |       |       | 100.0 |
+| Active                                                                      |         | 55:01 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.9 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.0 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.0 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.2 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   8.1 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.9 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.1 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.9 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.3 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.9 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  10.8 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.6 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  10.4 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.2 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.3 |
-| COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.8 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  31.8 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.7 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  11.4 |
-| COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.7 |
-| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.2 |
+| COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.7 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 16:59 |  30.9 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.5 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  11.1 |
+| COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
+| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.1 |
+| STARTED Split the "built-ins" by language                                   |         |       |  0:28 |   0.8 |
+| STARTED Models should have an associated language                           |         |       |  1:13 |   2.2 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.2 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -496,6 +498,7 @@ At present we are ignoring facet directories. Read them from the meta
 data and place items in the correct locations.
 
 *** STARTED Split the "built-ins" by language                         :story:
+    CLOCK: [2016-12-09 Fri 11:57]--[2016-12-09 Fri 12:12] =>  0:15
     CLOCK: [2016-12-09 Fri 10:38]--[2016-12-09 Fri 10:42] =>  0:04
     CLOCK: [2016-12-09 Fri 10:28]--[2016-12-09 Fri 10:37] =>  0:09
 
@@ -510,6 +513,7 @@ means we need to completely segregate models by language, as per story
 first.
 
 *** STARTED Models should have an associated language                  :epic:
+    CLOCK: [2016-12-09 Fri 11:17]--[2016-12-09 Fri 11:56] =>  0:39
     CLOCK: [2016-12-09 Fri 10:42]--[2016-12-09 Fri 11:16] =>  0:34
 
 #+begin_quote
