--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,38 +12,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-09 Fri 14:11]
+#+CAPTION: Clock summary at [2016-12-10 Sat 10:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:09* |       |       | 100.0 |
+| *Total time*                                                                | *57:00* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:09   |       |       | 100.0 |
-| Active                                                                      |         | 56:09 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.3 |
+| Stories                                                                     | 57:00   |       |       | 100.0 |
+| Active                                                                      |         | 57:00 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.8 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.0 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.9 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.1 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.7 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.0 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.6 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.2 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.4 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  10.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.3 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  10.1 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.1 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.3 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.7 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  30.3 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.5 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.8 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  29.9 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.4 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.7 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.0 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.4 |
-| STARTED Split the "built-ins" by language                                   |         |       |  0:28 |   0.8 |
-| STARTED Models should have an associated language                           |         |       |  2:06 |   3.7 |
-| STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.2 |
-| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   0.9 |
+| COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   5.2 |
+| STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
+| STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -511,7 +511,8 @@ At present it is difficult to figure out:
 We need to split frontends in knit workflow tests. We need to also be
 able to conditionally run just one frontend.
 
-*** STARTED Split the "built-ins" by language                         :story:
+*** COMPLETED Split the "built-ins" by language                       :story:
+    CLOSED: [2016-12-10 Sat 10:41]
     CLOCK: [2016-12-09 Fri 11:57]--[2016-12-09 Fri 12:12] =>  0:15
     CLOCK: [2016-12-09 Fri 10:38]--[2016-12-09 Fri 10:42] =>  0:04
     CLOCK: [2016-12-09 Fri 10:28]--[2016-12-09 Fri 10:37] =>  0:09
@@ -526,7 +527,10 @@ means we need to completely segregate models by language, as per story
 [[https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_93.org#models-should-have-an-associated-language][Models should have an associated language]]. We need to implement this
 first.
 
-*** STARTED Models should have an associated language                  :epic:
+*** COMPLETED Models should have an associated language                :epic:
+    CLOSED: [2016-12-10 Sat 10:41]
+    CLOCK: [2016-12-10 Sat 10:04]--[2016-12-10 Sat 10:41] =>  0:37
+    CLOCK: [2016-12-10 Sat 09:50]--[2016-12-10 Sat 10:04] =>  0:14
     CLOCK: [2016-12-09 Fri 13:56]--[2016-12-09 Fri 14:08] =>  0:12
     CLOCK: [2016-12-09 Fri 13:02]--[2016-12-09 Fri 13:43] =>  0:41
     CLOCK: [2016-12-09 Fri 11:17]--[2016-12-09 Fri 11:56] =>  0:39
@@ -634,7 +638,7 @@ Tasks:
 - in assistant, during code generation, provide a function which
   injects the internal module.
 
-*** STARTED Add support for Decimal numbers                           :story:
+*** STARTED Add support for Decimal numbers in c++                    :story:
     CLOCK: [2016-11-30 Wed 13:04]--[2016-11-30 Wed 13:36] =>  0:32
 
 - try using ICU DecNumber library.
