--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 11:39]
+#+CAPTION: Clock summary at [2016-12-10 Sat 12:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:56* |       |       | 100.0 |
+| *Total time*                                                                | *58:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:56   |       |       | 100.0 |
-| Active                                                                      |         | 57:56 |       | 100.0 |
+| Stories                                                                     | 58:49   |       |       | 100.0 |
+| Active                                                                      |         | 58:49 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.8 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.9 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.8 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.0 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.5 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.2 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.1 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.9 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.4 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.1 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.0 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.7 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.0 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.2 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.7 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  29.4 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.4 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.5 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  29.0 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.3 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.3 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.0 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   5.1 |
-| STARTED Add support for properties in C#                                    |         |       |  0:56 |   1.6 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   5.0 |
+| STARTED Add support for properties in C#                                    |         |       |  1:49 |   3.1 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
 | STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -577,6 +577,8 @@ which is a property of the model, and one entry of which is "language
 agnostic".
 
 *** STARTED Add support for properties in C#                          :story:
+    CLOCK: [2016-12-10 Sat 12:26]--[2016-12-10 Sat 12:34] =>  0:08
+    CLOCK: [2016-12-10 Sat 11:40]--[2016-12-10 Sat 12:25] =>  0:45
     CLOCK: [2016-12-10 Sat 11:31]--[2016-12-10 Sat 11:39] =>  0:08
     CLOCK: [2016-12-10 Sat 10:42]--[2016-12-10 Sat 11:30] =>  0:48
 
