--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 11:43]
+#+CAPTION: Clock summary at [2016-12-11 Sun 11:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *64:28* |       |       | 100.0 |
+| *Total time*                                                                | *64:37* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 64:28   |       |       | 100.0 |
-| Active                                                                      |         | 64:28 |       | 100.0 |
+| Stories                                                                     | 64:37   |       |       | 100.0 |
+| Active                                                                      |         | 64:37 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -48,7 +48,7 @@
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
 | COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.2 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.6 |
-| STARTED Add support for Equals in C#                                        |         |       |  1:30 |   2.3 |
+| STARTED Add support for Equals in C#                                        |         |       |  1:39 |   2.6 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.4 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -670,6 +670,8 @@ Links:
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add support for Equals in C#                              :story:
+    CLOCK: [2016-12-11 Sun 11:49]--[2016-12-11 Sun 11:53] =>  0:04
+    CLOCK: [2016-12-11 Sun 11:43]--[2016-12-11 Sun 11:48] =>  0:05
     CLOCK: [2016-12-10 Sat 17:57]--[2016-12-10 Sat 18:11] =>  0:14
     CLOCK: [2016-12-10 Sat 16:34]--[2016-12-10 Sat 17:50] =>  1:16
 
