--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,43 +12,43 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 11:53]
+#+CAPTION: Clock summary at [2016-12-11 Sun 12:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *64:37* |       |       | 100.0 |
+| *Total time*                                                                | *65:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 64:37   |       |       | 100.0 |
-| Active                                                                      |         | 64:37 |       | 100.0 |
+| Stories                                                                     | 65:21   |       |       | 100.0 |
+| Active                                                                      |         | 65:21 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.9 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.7 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.8 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.6 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   1.8 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.7 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.6 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   1.9 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.2 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.9 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.1 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.8 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.8 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  26.4 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  26.1 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.0 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.4 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.3 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.5 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.8 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.7 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.6 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.5 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.6 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
 | COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.2 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.6 |
-| STARTED Add support for Equals in C#                                        |         |       |  1:39 |   2.6 |
+| STARTED Add support for Equals in C#                                        |         |       |  2:23 |   3.6 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.4 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -670,6 +670,7 @@ Links:
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add support for Equals in C#                              :story:
+    CLOCK: [2016-12-11 Sun 11:54]--[2016-12-11 Sun 12:38] =>  0:44
     CLOCK: [2016-12-11 Sun 11:49]--[2016-12-11 Sun 11:53] =>  0:04
     CLOCK: [2016-12-11 Sun 11:43]--[2016-12-11 Sun 11:48] =>  0:05
     CLOCK: [2016-12-10 Sat 17:57]--[2016-12-10 Sat 18:11] =>  0:14
