--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 12:57]
+#+CAPTION: Clock summary at [2016-12-11 Sun 16:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *65:38* |       |       | 100.0 |
+| *Total time*                                                                | *65:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 65:38   |       |       | 100.0 |
-| Active                                                                      |         | 65:38 |       | 100.0 |
+| Stories                                                                     | 65:47   |       |       | 100.0 |
+| Active                                                                      |         | 65:47 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -34,21 +34,21 @@
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  26.0 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  25.9 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.0 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.3 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.2 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.5 |
-| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.8 |
+| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.7 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.7 |
 | COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.5 |
-| COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.6 |
+| COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.5 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
 | COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.2 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.6 |
-| STARTED Add support for Equals in C#                                        |         |       |  2:40 |   4.1 |
+| STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.3 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.3 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -670,6 +670,7 @@ Links:
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add support for Equals in C#                              :story:
+    CLOCK: [2016-12-11 Sun 16:01]--[2016-12-11 Sun 16:10] =>  0:09
     CLOCK: [2016-12-11 Sun 12:44]--[2016-12-11 Sun 12:57] =>  0:13
     CLOCK: [2016-12-11 Sun 12:39]--[2016-12-11 Sun 12:43] =>  0:04
     CLOCK: [2016-12-11 Sun 11:54]--[2016-12-11 Sun 12:38] =>  0:44
